k8s/copilot-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: copilot-deployment
  labels:
    app: copilot
spec:
  replicas: 2
  selector:
    matchLabels:
      app: copilot
  template:
    metadata:
      labels:
        app: copilot
    spec:
      containers:
        - name: copilot
          image: vaibhav5702/restroworks-copilot:latest
          ports:
            - containerPort: 8080
